Music wird nun über die Einstellungen eingelesen

--- a/FIPLY/App/app/src/main/res/layout/fragment_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_main.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startTr"
         android:textSize="25dp"
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startEU"
         android:textSize="25dp"
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startTrainView"
         android:textSize="25dp"
@@ -54,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startUe"
         android:textSize="25dp"
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startPlaylist"
         android:textSize="25dp"
@@ -78,9 +78,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:background="@color/darkMenuButtons"
         android:text="@string/startStatistic"
+        android:textSize="25dp"
+        android:textColor="@color/darkSecondary"
+        />
+
+    <Button
+        android:id="@+id/btStartSettings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:background="@color/darkMenuButtons"
+        android:text="@string/startSettings"
         android:textSize="25dp"
         android:textColor="@color/darkSecondary"
         />
