--- a/FIPLY/App/app/src/main/res/layout/trainingsplan_item.xml
+++ b/FIPLY/App/app/src/main/res/layout/trainingsplan_item.xml
@@ -1,35 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal"
-    android:layout_marginLeft="10dp">
+    android:layout_marginLeft="10dp"
+    android:descendantFocusability="blocksDescendants"
+    android:padding="5dp"
+    >
 
+    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+        android:layout_width="270dp"
+        android:layout_height="match_parent"
+        android:id="@+id/planinfolinearlayout"
+        >
 
-    <TextView
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/plannametv"
+            android:textColor="@color/darkPrimary"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/trainingszieltv"
+            android:layout_below="@+id/plannametv"
+            android:textColor="@color/white"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/phasendauerbereichtv"
+            android:layout_below="@+id/trainingszieltv"
+            android:textColor="@color/white"/>
+    </LinearLayout>
+
+    <ImageButton
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Planname"
-        android:id="@+id/plannametv"
-        android:textColor="@color/darkPrimary"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Trainingsziel"
-        android:id="@+id/trainingszieltv"
-        android:layout_below="@+id/plannametv"
-        android:textColor="@color/white"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Startdatum - Enddatum [Timetotal]"
-        android:id="@+id/phasendauerbereichtv"
-        android:layout_below="@+id/trainingszieltv"
-        android:textColor="@color/white"/>
-
+        android:id="@+id/imageButtonInfo"
+        android:src="@drawable/informationsmall"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_toRightOf="@+id/planinfolinearlayout"
+        android:background="@color/darkSecondary"
+        android:layout_marginTop="5dp"
+        android:focusableInTouchMode="true"
+        />
 </RelativeLayout>
