--- a/FIPLY/App/app/src/main/res/layout/fragment_settings.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_settings.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/tvSettingsMusic"
+        android:layout_marginTop="10dp"
         />
 
     <Button
@@ -17,12 +18,23 @@
         android:layout_height="wrap_content"
         android:text="@string/btSettingsMusic"
         android:background="@drawable/buttonshape"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:id="@+id/btSettingsRefreshMusic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btSettingsRefreshMusic"
+        android:background="@drawable/buttonshape"
+        android:layout_marginTop="10dp"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvSettingsSongFoundCount"
+        android:layout_marginTop="10dp"
         />
 
 </LinearLayout>
