--- a/FIPLY/App/app/src/main/res/xml/preferences.xml
+++ b/FIPLY/App/app/src/main/res/xml/preferences.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <ListPreference
+     android:key="notificationInterval"
+     android:title="@string/notificationInterval"
+     android:defaultValue="@string/notificationIntervalDefault"
+     android:entries="@array/notificationIntervalArray"
+     android:entryValues="@array/notificationIntervalArrayValues"
+     android:summary="%s"
+     />
+
+    <Preference android:title="@string/manageMusic" >
+        <intent
+    </Preference>
 
 </PreferenceScreen>
