--- a/FIPLY/App/app/src/main/res/values/arrays.xml
+++ b/FIPLY/App/app/src/main/res/values/arrays.xml
@@ -6,4 +6,24 @@
         <item>Benchpress;Testbeschreibung;Testanleitung;Testmuskelgruppe;Tipp;Testvideo</item>
     </string-array>
 
+    <string-array name="notificationIntervalArray">
+        <item>keine Notifications</item>
+        <item>1 Minute</item>
+        <item>2 Minuten</item>
+        <item>5 Minuten</item>
+        <item>1 Stunde</item>
+        <item>5 Stunden</item>
+        <item>10 Stunden</item>
+    </string-array>
+
+    <string-array name="notificationIntervalArrayValues">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>5</item>
+        <item>60</item>
+        <item>300</item>
+        <item>600</item>
+    </string-array>
+
 </resources>
