--- a/FIPLY/App/app/src/main/res/values/styles.xml
+++ b/FIPLY/App/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:colorPrimaryDark">@color/darkSecondary</item>
         <item name="android:windowBackground">@color/darkSecondary</item>
         <item name="android:navigationBarColor">@color/darkSecondary</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
 
     <style name="CustomTheme" parent="android:Theme">
