Settings and Notifications work as intended

--- a/FIPLY/App/app/src/main/res/layout/activity_settings.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_settings.xml
@@ -37,4 +37,9 @@
         android:layout_marginTop="10dp"
         />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvSettingsSongs"></ListView>
+
 </LinearLayout>
