Added BannerAds and updated AdvertisingDocs

--- a/FIPLY/App/app/src/main/res/layout/fragment_planmanagement.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_planmanagement.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:ads="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -47,9 +49,20 @@
         android:layout_height="match_parent"
         android:id="@+id/listViewtrainingsplan"
         android:layout_margin="10dp"
+        android:layout_below="@id/rellayoutplan"
         />
 
-</LinearLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/planAdView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/1033173712"
+        ></com.google.android.gms.ads.AdView>
+
+</RelativeLayout>
 
 
 
