--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
@@ -28,14 +28,16 @@
         android:layout_alignParentStart="false"
         android:layout_below="@+id/imgGender"
         android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="20dp" />
 
     <ImageView
         android:id="@+id/imgName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="false" />
 
     <ImageView
         android:id="@+id/imgGender"
