--- a/FIPLY/App/app/src/main/res/layout/fragment_statistic.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_statistic.xml
@@ -16,24 +16,39 @@
             android:layout_height="wrap_content"
             android:text="Dummy Text"
             android:textAlignment="center"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:layout_marginBottom="30dp" />
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/statisticMoodLabel"
+            android:layout_gravity="center_horizontal"
+            android:text="Dein Gemütszustand" />
 
         <com.jjoe64.graphview.GraphView
             android:id="@+id/graphMood"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_gravity="right"
-            app:seriesColor="#ee0000"
-            app:seriesType="line" />
+            app:seriesColor="#ee0000" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Soviel hast du gehoben!"
+            android:id="@+id/statisticWeightLabel"
+            android:layout_gravity="center_horizontal" />
 
         <com.jjoe64.graphview.GraphView
             android:id="@+id/graphLift"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_gravity="right"
-            app:seriesColor="#ee0000"
-            app:seriesType="line" />
+            app:seriesColor="#ee0000" />
 
     </LinearLayout>
 </ScrollView>
