--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
@@ -3,12 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="1"
-        android:rowCount="4">
+        android:rowCount="4"
+        android:columnCount="2">
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,6 +28,7 @@
             android:scaleType="fitCenter"
             android:layout_gravity="center_horizontal"
             android:layout_row="1"
+            android:layout_columnSpan="1"
             android:visibility="visible"
             android:layout_column="0" />
 
@@ -37,6 +39,7 @@
             android:scaleType="fitCenter"
             android:layout_gravity="center_horizontal"
             android:layout_row="1"
+            android:layout_columnSpan="1"
             android:background="@color/darkSecondary"
             android:clickable="true"
             android:layout_column="0" />
@@ -58,5 +61,5 @@
             android:layout_row="3"
             android:layout_gravity="center_horizontal"
             android:layout_column="0" />
-    </LinearLayout>
+    </GridLayout>
 </ScrollView>
