--- a/FIPLY/App/app/src/main/res/layout/fragment_statistic.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_statistic.xml
@@ -39,17 +39,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Soviel hast du gehoben!"
+            android:text="More statistics coming soon!"
             android:id="@+id/statisticWeightLabel"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp" />
+            android:layout_marginTop="25dp"
+            />
 
         <com.jjoe64.graphview.GraphView
             android:id="@+id/graphLift"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_gravity="right"
-            app:seriesColor="#ee0000" />
+            app:seriesColor="#ee0000"
+            android:visibility="invisible"/>
 
     </LinearLayout>
 </ScrollView>
