--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungfilter.xml
@@ -51,7 +51,7 @@
             android:layout_column="0"
             android:layout_gravity="center_horizontal"
             android:layout_row="2"
-            android:text="Reset Filter" />
+            android:text="Filter zurücksetzen" />
 
         <Button
             android:layout_width="wrap_content"
